# ns-unreal-mcp

./: .gitignore  README.md  RELEASE_NOTES_v0.1.3.md
docs/: 22_Implementation_Plan_Sequencer_MCP_Control.md  23_Sequencer_M1_M6_Implementation_Report.md  24_Implementation_Plan_Sequencer_API_Compatibility_53_56.md  25_Sequencer_API_Compatibility_WP1_WP6_Report.md  (+2 more)
mcp_server/: README.md  pyproject.toml
mcp_server/configs/: config.example.yaml
mcp_server/docs/: INTERNAL_ONEPAGE_SETUP.md  MULTI_INSTANCE_SELECTOR.md  RELEASE_CHECKLIST.md  RUNBOOK.md  TROUBLESHOOTING.md
mcp_server/examples/: agent_tool_client.py  e2e_smoke_runner.py
mcp_server/scripts/: controlrig_e2e_runner.py  e2e_modes_runner.py  run_controlrig_e2e.cmd  run_controlrig_e2e.ps1  run_controlrig_e2e.sh  run_mcp_server.cmd  run_mcp_server.ps1  run_mcp_server.sh
mcp_server/src/mcp_server/: __init__.py  __main__.py  app.py  config.py  event_router.py  health_monitor.py  logging_setup.py  mcp_facade.py  mcp_stdio.py  metrics.py  request_broker.py  sequencer_orchestrator.py  tool_catalog.py  tool_passthrough.py  ue_transport.py  umg_orchestrator.py  ws_endpoint.py
mcp_server/src/mcp_server/models/: __init__.py  ue_messages.py
mcp_server/src/mcp_server/utils/: retry.py  wsl.py
mcp_server/tests/unit/: test_config.py  test_event_router.py  test_mcp_stdio.py  test_metrics.py  test_request_broker.py  test_sequencer_orchestrator.py  test_tool_passthrough.py  test_ue_transport_binary_messages.py  test_ue_transport_send_json.py  test_umg_orchestrator.py  test_ws_endpoint.py  test_wsl_utils.py
(+93 files in other folders)
